changed the tooltip orientation for mutation diagram regions to properly display contents of the tooltip for the leftmost regions slightly reduced the width of the input box for the mutation details table to prevent text wrap in ubuntu firefox

--- a/portal/src/main/webapp/css/genomic.css
+++ b/portal/src/main/webapp/css/genomic.css
@@ -69,6 +69,11 @@ th.mutation-details-qtip-style
 	width: 200px;
 }
 
+#mutation_details .dataTables_filter input
+{
+	width: 120px;
+}
+
 #mutation_details .dataTables_info
 {
 	width: 300px;
